# css-sdk

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: main.cpp
src/core/: core.cpp  core.h
src/core/addresses/: addresses.cpp  addresses.h
src/core/entities/: entities.cpp  entities.h
src/core/globals/: globals.h
src/core/hooks/: hooks.cpp  hooks.h
src/core/interfaces/: interfaces.cpp  interfaces.h
src/core/menu/: menu.cpp  menu.h
src/core/netvars/: netvars.cpp  netvars.h
src/core/patches/: patches.cpp  patches.h
src/core/render/: render.cpp  render.h
src/sdk/interfaces/: app_system.h  base_client_dll.h  base_interface.h  client_entity_list.h  client_state.h  cvar.h  debug_overlay.h  effects.h  engine_client.h  engine_trace.h  game_console.h  game_events.h  global_vars_base.h  input_system.h  interface.h  model_render.h  prediction.h  prediction_system.h  surface.h  view_render_beams.h
src/sdk/main/: base_animating.cpp  base_animating.h  base_combat_character.h  base_entity.h  base_flex.h  base_handle.h  base_player.h  client_class.h  client_entity.h  client_networkable.h  client_renderable.h  client_thinkable.h  client_unknown.h  collideable.h  collision_property.h  color.h  convar.h  cs_player.h  datamap.h  handle_entity.h  i_net_channel.h  i_net_channel_info.h  matrix_3x4.h  overlay_text.h  player_resource.h  qangle.h  ray.h  recv.h  trace.h  trace_filter.h  vector2.h  vector3.h
src/sdk/misc/: analog_code.h  beam.h  bitbuf_error_type.h  button_code.h  client_frame_stage.h  color.h  cs_class_ids.h  flags.h  input_enums.h  masks.h  net_address.h  player_info.h  shadow_type.h  solid_type.h
